--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ argparse==1.4.0
 numpy==1.17.3
 tensorflow==1.14
 keras==2.3.0
-scikit-image 0.16.2
-opencv-python 4.1.1.26
+scikit-image==0.16.2
+opencv-python==4.1.1.26
